--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>   
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcloudsblogs.github.io/The-Ultimate-Guide-to-Final-Expense-Leads-Helping-Agents-Connect-with-the-Right-Clients/">https://cloudstackcloudsblogs.github.io/The-Ultimate-Guide-to-Final-Expense-Leads-Helping-Agents-Connect-with-the-Right-Clients/</a><br>   
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Agent+Autopilot/The+Ultimate+Guide+to+Final+Expense+Leads:+Helping+Agents+Connect+with+the+Right+Clients/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Agent+Autopilot/The+Ultimate+Guide+to+Final+Expense+Leads:+Helping+Agents+Connect+with+the+Right+Clients/index.html</a><br>
+                <a target="_bLank" href="https://the-ultimate-guide-to-git-d5d68d-cloudstackcloudsblogs-projects.vercel.app/">https://the-ultimate-guide-to-git-d5d68d-cloudstackcloudsblogs-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://keen-seahorse-b8e36c.netlify.app/">https://keen-seahorse-b8e36c.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
